--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -132,3 +132,4 @@ ManualIPAddress=
 [CoreRedirects]
 +FunctionRedirects=(OldName="/Script/ActionRoguelike.SAttributeComponent.GetAttributeComponent",NewName="/Script/ActionRoguelike.SAttributeComponent.GetAttributes")
 +PropertyRedirects=(OldName="/Script/ActionRoguelike.SAction_ProjectileAttack.HandSocket",NewName="/Script/ActionRoguelike.SAction_ProjectileAttack.HandSocketName")
++FunctionRedirects=(OldName="/Script/ActionRoguelike.SAction.OnRep_IsRunning",NewName="/Script/ActionRoguelike.SAction.OnRep_RepData")
