Adding main menu and pause menu black hole projectile improved

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Engine/Maps/Templates/OpenWorld
-EditorStartupMap=/Game/_Game/prubes.prubes
+EditorStartupMap=/Game/_Game/Maps/MainMenu_Entry.MainMenu_Entry
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
@@ -133,3 +133,5 @@ ManualIPAddress=
 +FunctionRedirects=(OldName="/Script/ActionRoguelike.SAttributeComponent.GetAttributeComponent",NewName="/Script/ActionRoguelike.SAttributeComponent.GetAttributes")
 +PropertyRedirects=(OldName="/Script/ActionRoguelike.SAction_ProjectileAttack.HandSocket",NewName="/Script/ActionRoguelike.SAction_ProjectileAttack.HandSocketName")
 +FunctionRedirects=(OldName="/Script/ActionRoguelike.SAction.OnRep_IsRunning",NewName="/Script/ActionRoguelike.SAction.OnRep_RepData")
++ClassRedirects=(OldName="/Script/ActionRoguelike.SBlackholeProjectile",NewName="/Script/ActionRoguelike.SBlackHoleProjectile")
+
